package org.example.roomreservation.model.entity;

public enum ReservationStatus {
    CONFIRMED,CANCELLED,ATTENDED
}
