package org.example.roomreservation.model.entity;

public enum Role {
    USER, ADMIN
}
